--- a/立德/Form1.resx
+++ b/立德/Form1.resx
@@ -123,4 +123,7 @@
   <metadata name="timer_read_upload.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>239, 15</value>
   </metadata>
+  <metadata name="timer_set_pq.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>436, 15</value>
+  </metadata>
 </root>
